--- a/employee.html
+++ b/employee.html
@@ -7,6 +7,10 @@
   <title>Aaryan's Commerce - Employees</title>
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css">
+  <!--[if lt IE 9]>
+    <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
+  <![endif]
 </head>
 <body>
   <!-- Navbar starts -->
@@ -34,9 +38,6 @@
   <div class="container">
     <h1>Employees</h1>
     <ul id="employee-list" class="list-group"></ul>
-    <div id="employee-details" class="employee-details">
-      <!-- Employee details will be displayed here -->
-    </div>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
@@ -44,34 +45,13 @@
 
   <script>
     $(document).ready(function () {
-      var employeeDetails = $("#employee-details");
-
-      function displayEmployeeDetails(employee) {
-        $.ajax({
-          type: 'GET',
-          dataType: 'json',
-          url: 'https://dummy.restapiexample.com/api/v1/employee/' + employee.id,
-          success: function (data, status, xhr) {
-            var details = "Employee Details:<br>" +
-              "Name: " + employee.employee_name + "<br>" +
-              "ID: " + employee.id + "<br>" +
-              "Salary: " + employee.employee_salary + "<br>" +
-              "Age: " + employee.employee_age;
-
-            employeeDetails.html(details);
-          },
-          error: function (xhr, status, error) {
-            console.error("Error fetching employee details:", error);
-          }
-        });
-      }
-
       $.ajax({
         type: 'GET',
         dataType: 'json',
         url: 'https://dummy.restapiexample.com/api/v1/employees',
         success: function (data, status, xhr) {
           var employees = data.data;
+          var employeeList = $("#employee-list");
 
           employees.forEach(function (employee) {
             var listItem = $("<li>")
@@ -87,7 +67,7 @@
             });
 
             listItem.append(detailsButton);
-            $("#employee-list").append(listItem);
+            employeeList.append(listItem);
           });
         },
         error: function (xhr, status, error) {
@@ -95,6 +75,16 @@
         }
       });
     });
+
+    function displayEmployeeDetails(employee) {
+      // You can modify this function to display employee details in a new page or modal.
+      // For simplicity, we will display the employee details in an alert.
+      alert("Employee Details:\n" +
+        "Name: " + employee.employee_name + "\n" +
+        "ID: " + employee.id + "\n" +
+        "Salary: " + employee.employee_salary + "\n" +
+        "Age: " + employee.employee_age);
+    }
   </script>
 
   <style>
@@ -105,10 +95,6 @@
 
     .btn-info {
       margin-top: 5px;
-    }
-
-    .employee-details {
-      margin-top: 20px;
     }
   </style>
 </body>
