--- a/Ecommerce.html
+++ b/Ecommerce.html
@@ -4,14 +4,19 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE, edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Aaryan's Commerce - Employees</title>
+  <title>Aaryan's Commerce</title>
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css">
+  <!--[if lt IE 9]>
+    <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
+  <![endif]
 </head>
 <body>
-  <!-- Navbar starts -->
+  <-- Navbar starts -->
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
@@ -21,94 +26,117 @@
         </button>
         <a class="navbar-brand" href="#">Aaryans Commerce</a>
       </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#">Home</a></li>
           <li><a href="#">About Us</a></li>
           <li><a href="#">Contact us</a></li>
         </ul>
-      </div>
-    </div>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
   </nav>
 
-  <div class="container">
-    <h1>Employees</h1>
-    <ul id="employee-list" class="list-group"></ul>
-    <div id="employee-details" class="employee-details">
-      <!-- Employee details will be displayed here -->
-    </div>
-  </div>
+  <div id="temp" class="container"></div>
 
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
 
   <script>
-    $(document).ready(function () {
-      var employeeDetails = $("#employee-details");
+    $.ajax({
+      type: 'GET',
+      dataType: 'json',
+      url: 'https://dummyjson.com/products',
+      success: function (data, status, xhr) {
+        var products = data.products;
+        var HTML = "";
+        var productIdCounter = 1; // Initialize a counter for unique product IDs
 
-      function displayEmployeeDetails(employee) {
-        $.ajax({
-          type: 'GET',
-          dataType: 'json',
-          url: 'https://dummy.restapiexample.com/api/v1/employee/' + employee.id,
-          success: function (data, status, xhr) {
-            var details = "Employee Details:<br>" +
-              "Name: " + employee.employee_name + "<br>" +
-              "ID: " + employee.id + "<br>" +
-              "Salary: " + employee.employee_salary + "<br>" +
-              "Age: " + employee.employee_age;
+        for (let i = 0; i < products.length; i++) {
+          var productId = productIdCounter++; // Generate a unique product ID
 
-            employeeDetails.html(details);
-          },
-          error: function (xhr, status, error) {
-            console.error("Error fetching employee details:", error);
-          }
-        });
-      }
-
-      $.ajax({
-        type: 'GET',
-        dataType: 'json',
-        url: 'https://dummy.restapiexample.com/api/v1/employees',
-        success: function (data, status, xhr) {
-          var employees = data.data;
-
-          employees.forEach(function (employee) {
-            var listItem = $("<li>")
-              .addClass("list-group-item")
-              .text(employee.employee_name);
-
-            var detailsButton = $("<button>")
-              .text("Details")
-              .addClass("btn btn-info pull-right");
-
-            detailsButton.on("click", function () {
-              displayEmployeeDetails(employee);
-            });
-
-            listItem.append(detailsButton);
-            $("#employee-list").append(listItem);
-          });
-        },
-        error: function (xhr, status, error) {
-          console.error("Error fetching data:", error);
+          HTML +=
+            `<div class="col-sm-3">
+              <p>${products[i].brand}</p>
+              <p>${products[i].title}</p>
+              <img src="${products[i].images[0]}" class='img-responsive prod' data-id="${productId}" style='height:200px'><br>
+            </div>`;
         }
-      });
+        $("#temp").html(HTML);
+
+        // Define what should happen when a product is clicked
+        $(".prod").click(function () {
+          var productId = $(this).data('id'); // Get the product ID from the clicked element
+
+          $.ajax({
+            type: 'GET',
+            dataType: 'json',
+            url: 'https://dummyjson.com/products/' + productId,
+            success: function (data, status, xhr) {
+              console.log(data);
+
+              var totalImages = data.images.length;
+
+              var smallImagesHTML = "";
+                for (let i = 0; i < totalImages; i++) {
+                smallImagesHTML += `<img src="${data.images[i]}" alt="Product Image" class="image small-image" style="width: 2cm;","height: 2cm">`;
+                }
+
+
+              var productHTML = `
+                <div class="container-fluid">
+                  <div class="col-sm-7 menu">
+                    <img src="${data.images[0]}" alt="Product Image" class="default" style="width: 5in;">
+                    <br>
+                    ${smallImagesHTML}
+                  </div>
+                  <div class="col-sm-5">
+                    <br>
+                    <h1>${data.title}</h1>
+                    <h3>Description</h3>
+                    <p class="desc">${data.description}</p>
+                    <h3>Price: $${data.price}</h3>
+                    <h3>Discount: ${data.discountPercentage}%</h3>
+                    <h3>Brand: ${data.brand}</h3>
+                    <h3>Category: ${data.category}</h3>
+                    <h3>Rating: ${data.rating}/5</h3>
+                    <h3>In Stock: ${data.stock} items</h3>
+                    <a href="https://www.amazon.in/Apple-iPhone-15-Pro-Max/dp/B0CHX1K2ZC?th=1"><button type="button" class="btn btn-primary">Buy Now</button></a>
+                    <button type="button" class="btn btn-primary add-to-cart">Add To Cart</button>
+                    <a href=""><button type="button" class="btn btn-danger">Wishlist</button></a>
+                    <a href="shop222.html" id="back-button"><button type="button" class="btn btn-danger">Back</button></a>
+                  </div>
+                </div>`;
+
+              $("#temp").html(productHTML);
+
+              // Clicking on small images to load into the default image space
+              $(".small-image").click(function () {
+                var imageSrc = $(this).attr('src');
+                $(".default").attr("src", imageSrc);
+              });
+            }
+          });
+        });
+      },
+      error: function (xhr, status, error) {
+        console.error("Error fetching data:", error);
+      }
     });
   </script>
 
   <style>
-    .list-group-item {
-      display: flex;
-      justify-content: space-between;
+    .default {
+      margin-top: 100px;
+      margin-bottom: 50px;
     }
 
-    .btn-info {
-      margin-top: 5px;
+    .small-image {
+      margin-left: 20px;
     }
 
-    .employee-details {
-      margin-top: 20px;
+    .desc {
+      text-align: justify;
     }
   </style>
 </body>
