Ecommerce with cart function
The provided HTML and JavaScript code implements a simple e-commerce web page with features such as displaying product images and details, adding items to a shopping cart, modifying item quantities, removing items, and clearing the entire cart. The shopping cart functionality is enhanced to handle product quantities and provides options to modify or remove items individually. The product details, fetched from a dummy JSON API, are dynamically loaded into the page, and users can view product images and descriptions. The interface utilizes the Bootstrap framework for responsive design. The shopping cart details, including product names, prices, and quantities, are displayed in a modal. Additionally, the code leverages local storage to persist the shopping cart data between page reloads, enhancing the user experience. The "Clear Cart" button efficiently empties the cart and updates the display accordingly.

--- a/Ecommerce.html
+++ b/Ecommerce.html
@@ -104,7 +104,7 @@
                     <a href="https://www.amazon.in/Apple-iPhone-15-Pro-Max/dp/B0CHX1K2ZC?th=1"><button type="button" class="btn btn-primary">Buy Now</button></a>
                     <button type="button" class="btn btn-primary add-to-cart">Add To Cart</button>
                     <a href=""><button type="button" class="btn btn-danger">Wishlist</button></a>
-                    <a href="shop222.html" id="back-button"><button type="button" class="btn btn-danger">Back</button></a>
+                    <a href="Ecommerce.html" id="back-button"><button type="button" class="btn btn-danger">Back</button></a>
                   </div>
                 </div>`;
 
